@@ -1,5 +1,8 @@
 2014-01-30  Lars Ingebrigtsen  <larsi@gnus.org>
 
+	* nnmail.el (nnmail-split-it): Instead of redoing the search to restore
+	the match data, just save and restore it explictly (bug#12375).
+
 	* gnus-sum.el (gnus-summary-read-group-1): Initialize the spam code if
 	that's needed.
 
